# HealthPredictHub

./: README.md
HealthPredictHub/: .replit  app.py  healthpredict.db  pyproject.toml  replit.md
HealthPredictHub/page_modules/: __init__.py  about.py  batch.py  diabetes.py  heart.py  history.py  home.py  kidney.py  liver.py  report.py  retrain.py  stroke.py  visualizations.py
HealthPredictHub/utils/: database.py  helpers.py  models.py
